--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-6tkodu;opykupoyktu
+<!DOCTYPE html>
+<html>
+<head>
+    <title>صفحه وب من</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>سلام، این اولین وب‌سایت من است!</h1>
+    <p>این یک پاراگراف نمونه است. ما می‌توانیم هر متنی را در اینجا قرار دهیم.</p>
+    <script src="script.js"></script>
+</body>
+</html>
