--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa">
 <head>
-    <title>صفحه وب من</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>عنوان سایت شما</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>سلام، این اولین وب‌سایت من است!</h1>
-    <p>این یک پاراگراف نمونه است. ما می‌توانیم هر متنی را در اینجا قرار دهیم.</p>
+    <header>
+        <h1>عنوان صفحه</h1>
+        <nav>
+            <ul>
+                <li><a href="#">خانه</a></li>
+                <li><a href="#">درباره ما</a></li>
+                <li><a href="#">تماس با ما</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <p>این یک پاراگراف نمونه است.</p>
+    </main>
+
+    <footer>
+        <p>&copy; تمامی حقوق محفوظ است.</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
